[gd_scene load_steps=8 format=3 uid="uid://dlqsj0gh8e6or"]

[ext_resource type="Script" uid="uid://d0lew4esd7amh" path="res://Entities/UI/PlanetPage/trade_panel.gd" id="1_avwxq"]
[ext_resource type="PackedScene" uid="uid://csabn53iqg0hn" path="res://Entities/UI/PlanetPage/NewTradePanel/new_trade_panel.tscn" id="3_0phhk"]
[ext_resource type="PackedScene" uid="uid://if7mmhbrohws" path="res://Entities/UI/PlanetPage/shipment_button.tscn" id="3_i65yt"]
[ext_resource type="Texture2D" uid="uid://i2qu4ns67dra" path="res://Assets/Textures/UI Textures/Cross.png" id="4_i65yt"]
[ext_resource type="PackedScene" uid="uid://qhbwttdh5oqx" path="res://Entities/UI/PlanetPage/new_shipment_panel.tscn" id="5_118au"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5chpv"]
load_path = "res://.godot/imported/UIpack_vector.svg-3417e0ddf32eef45a1009385661fe98b.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74v1c"]
texture = SubResource("CompressedTexture2D_5chpv")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(485, 310, 100, 100)
modulate_color = Color(0.6255971, 0.6255971, 0.6255971, 1)

[node name="TradePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avwxq")
new_shipment_panel_scene = ExtResource("5_118au")
new_trade_panel_scene = ExtResource("3_0phhk")
shipment_button_scene = ExtResource("3_i65yt")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(750, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 19.0
offset_right = 55.0
offset_bottom = 37.0
grow_horizontal = 2
text = "Trade Panel"

[node name="Panel" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 47.0
offset_right = -21.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_74v1c")
current_tab = 1

[node name="Shipments" type="Panel" parent="Panel/Panel"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel/Shipments"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_74v1c")
horizontal_scroll_mode = 0

[node name="ShipmentContainer" type="VBoxContainer" parent="Panel/Panel/Shipments/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="NewShipmentButton" type="Button" parent="Panel/Panel/Shipments"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.16206
offset_top = -42.251007
offset_right = 71.16206
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "New Shipment"

[node name="Trades" type="Panel" parent="Panel/Panel"]
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel/Trades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_74v1c")
horizontal_scroll_mode = 0

[node name="NewTradeButton" type="Button" parent="Panel/Panel/Trades/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "New Trade"

[node name="TradeContainer" type="VBoxContainer" parent="Panel/Panel/Trades/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TradeButton" parent="Panel/Panel/Trades/ScrollContainer/TradeContainer" instance=ExtResource("3_i65yt")]
layout_mode = 2

[node name="NewTradeButton" type="Button" parent="Panel/Panel/Trades"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.16206
offset_top = -42.251007
offset_right = 71.16206
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "New Trade"

[node name="ExitButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.324158
offset_bottom = 24.251
grow_horizontal = 0
icon = ExtResource("4_i65yt")
expand_icon = true

[connection signal="pressed" from="Panel/Panel/Shipments/NewShipmentButton" to="." method="_on_new_shipment_button_pressed"]
[connection signal="pressed" from="Panel/Panel/Trades/ScrollContainer/NewTradeButton" to="." method="_on_new_trade_button_pressed"]
[connection signal="pressed" from="Panel/Panel/Trades/NewTradeButton" to="." method="_on_new_trade_button_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
